# papers

./: .gitignore  README.md  requirements.txt
canonical-papers/denoiser/: .gitignore  denoiser.ipynb
canonical-papers/gan/: Readme.md  conditional-gan.ipynb  gan.ipynb
canonical-papers/gan/models/CAN/: discriminator.pth  generator.pth
canonical-papers/prophet/: prophet.ipynb  prophet.py
canonical-papers/regression/: Playground.ipynb  lr.py
canonical-papers/seq2seq/: Readme.md
canonical-papers/simCLR/: SimCLR.ipynb  cifar_net_10_0.001_m0.9.pth
canonical-papers/simcse/: Makefile  main.py  pyproject.toml
canonical-papers/vae/: Readme.md  VAE - experiments.ipynb  VAE.ipynb
playground/denoiser/: .gitignore  asr-benchmark.ipynb  denoiser.ipynb  main.py  requirements.txt
playground/denoiser/helpers/: __init__.py  add_noise.py
playground/missing-label-classification/: .gitignore  Missing Labels.ipynb
playground/online-anomaly-detection/: .gitignore  Online Anomaly Detection.ipynb
playground/time-series/: forcasting.py
